# risotto

./: .codecov.yml  .dockerignore  .gitmodules  .replit  CMakeLists.txt  CNAME  CodeCoverage.cmake  Dockerfile  README.md
.circleci/: config.yml
.github/workflows/: main.yml
benchmarks/: benchmarks.cpp  fib.rst  list.rst  mandelbrot.rst  permute.rst  sieve.rst  storage.rst
dev/bench/: data.js
gh/: index.html
lib/: enum.h
src/cmd/: cmd.cpp  main.cpp
src/lib/: Risotto.cpp  Risotto.h
src/lib/compiler/: ByteResolver.cpp  ByteResolver.h  Compiler.cpp  Compiler.h  CompilerError.cpp  CompilerError.h  CompilerWalker.cpp  CompilerWalker.h  Frame.cpp  Frame.h  FunctionsTable.cpp  FunctionsTable.h  ReturnTypes.cpp  ReturnTypes.h  TypeDefinition.cpp  TypeDefinition.h  TypeEntry.cpp  TypeEntry.h  TypeReference.cpp  TypeReference.h  TypesManager.cpp  TypesManager.h  TypesTable.cpp  TypesTable.h  VariablesTable.cpp  VariablesTable.h
src/lib/compiler/utils/: ReturnsCandidatesFunctions.cpp  ReturnsCandidatesFunctions.h  Utils.cpp  Utils.h
src/lib/parser/: ASTPrinter.cpp  ASTPrinter.h  ParseError.cpp  ParseError.h  Parser.cpp  Parser.h
src/lib/parser/nodes/: ASTWalker.cpp  ASTWalker.h  Expr.cpp  Expr.h  Node.cpp  Node.h  ParameterDefinition.cpp  ParameterDefinition.h  Stmt.cpp  Stmt.h  TypeDescriptor.cpp  TypeDescriptor.h
src/lib/parser/nodes/Expr/: ArrayExpr.cpp  ArrayExpr.h  BinaryExpr.cpp  BinaryExpr.h  CallExpr.cpp  CallExpr.h  FunctionExpr.cpp  FunctionExpr.h  GetCallExpr.cpp  GetCallExpr.h  GetExpr.cpp  GetExpr.h  GroupingExpr.cpp  GroupingExpr.h  IdentifierCallExpr.cpp  IdentifierCallExpr.h  IdentifierExpr.cpp  IdentifierExpr.h  LiteralExpr.cpp  LiteralExpr.h  LogicalExpr.cpp  LogicalExpr.h  MixedCallExpr.cpp  MixedCallExpr.h  NewCallExpr.cpp  NewCallExpr.h  NewExpr.cpp  NewExpr.h  SetExpr.cpp  SetExpr.h  SubscriptExpr.cpp  SubscriptExpr.h  UnaryExpr.cpp  UnaryExpr.h  VarDeclStmt.cpp  VarDeclStmt.h  VariableExpr.cpp  VariableExpr.h
src/lib/parser/nodes/Stmt/: BlockStmt.cpp  BlockStmt.h  ExpressionStmt.cpp  ExpressionStmt.h  ForStmt.cpp  ForStmt.h  FunctionStmt.cpp  FunctionStmt.h  IfStmt.cpp  IfStmt.h  PrintStmt.cpp  PrintStmt.h  ReturnStmt.cpp  ReturnStmt.h  TypeStmt.cpp  TypeStmt.h  WhileStmt.cpp  WhileStmt.h
src/lib/tokenizer/: SyntaxError.cpp  SyntaxError.h  Token.cpp  Token.h  TokenType.h  Tokenizer.cpp  Tokenizer.h  TokensPrinter.cpp  TokensPrinter.h
src/lib/vm/: benchmark.c  benchmark.h  chunk.c  chunk.h  common.h  debug.c  debug.h  memory.c  memory.h  native_functions.c  native_functions.h  position.c  position.h  stats.c  stats.h  trace.c  trace.h  types.c  types.h  utils.c  utils.h  value.c  value.h  valuetype.h  vm.c  vm.h  vtable.c  vtable.h
tests/: benchmarks.cpp  common.cpp  common.h
tests/arrays/: arrays.cpp  bound.rst  common.out  common.rst
tests/benchmarks/: bounce.rst  list.rst  sieve.rst
tests/bit/: bit.cpp
tests/debug/: ast.out  debug.cpp  disassembled.out  test.rst  tokens.out  trace.out
tests/flow/: flow.cpp  if.out  if.rst  while.out  while.rst
tests/function/: arguments.out  arguments.rst  bound.out  bound.rst  fib.rst  function.cpp  lambda.out  lambda.rst  multiple_returns.rst  ooo.rst
tests/gc/: gc.cpp  gc.out  gc.rst
tests/interfaces/: interfaces.cpp  interfaces.rst
tests/operators/: logical_test_order.out  logical_test_order.rst  operators.cpp  overloading.out  overloading.rst  plus_string.out  plus_string.rst  shorthands.out  shorthands.rst
tests/structs/: structs.cpp  structs.rst
tests/type_descriptors/: types_descriptors.cpp
tests/utils/: pack.cpp
tests/value/: value.cpp
